* Fix: Update the Automatic Recurring Payments column on the Payment Methods table to only show which payment methods are supported by Subscriptions Core. PR#55
* Tweak: Update deprecation message when calling WC_Subscriptions_Coupon::cart_contains_limited_recurring_coupon() to mention the correct replacement function. PR#53
* Tweak: Update recurring payments copy on payment gateways page.
* Fix: Incorrect text when filtering subscriptions to no results.
* Changed: Subscription products must have a recurring amount greater than $0. PR#56 wcpay#3309

2021-11-23 - version 1.2.0
* Fix: Update tooltip wording when deleting product variation. PR#46
* Fix: Don't show an admin error notice when a store downgrades to a previous minor version of Subscriptions. WCS#4271

2021-11-12 - version 1.1.0
* Fix: Add consistent margins to the recurring taxes totals row on the Checkout and Cart block. PR#39
* Fix: Fatal error due to order with no created date in order row template. PR#40
* Fix: Fatal error on the customer payment page for renewal orders with deleted products. PR#42
* Fix: Misleading order note on payment method change. PR#41

2021-10-29 - version 1.0.3
* Fix: Errors when attempting to get the plugin version during PayPal requests. PR#27

2021-10-29 - version 1.0.2
* Fix: PHP 7.2 compatibility - remove trailing commas from function args. PR #23

2021-10-22 - version 1.0.1
* Fix: Don't show a downgrade notice when activating the WC Subscriptions extension after installing WCS Core. PR#7
* Fix: Correctly show the available payment methods when paying for a subscription renewal order. PR#9
* Fix: Don't show the WC Subscriptions extension welcome/installation message after installing WCS Core. PR#11
* Fix: Remove the "Welcome to Subscriptions" notice that is displayed upon upgrading from previous minor versions. PR#14
* Fix: Don't display a "Welcome to Subscriptions 2.1" for stores that have upgraded from really old version of Subscriptions. PR#16