@@ -4,6 +4,7 @@
 * Fix: Remove references to the Subscription extension in the tooltips found on the Payment Methods settings table. PR#55 wcpay#3234
 * Fix: Update the Automatic Recurring Payments column on the Payment Methods table to only show which payment methods are supported by Subscriptions Core. PR#55
 * Tweak: Update deprecation message when calling WC_Subscriptions_Coupon::cart_contains_limited_recurring_coupon() to mention the correct replacement function. PR#53
+* Fix: Prevent deprecation warnings when using WooCommerce Blocks. PR#54
 * Tweak: Update recurring payments copy on payment gateways page.
 * Fix: Incorrect text when filtering subscriptions to no results.
 * Changed: Subscription products must have a recurring amount greater than $0. PR#56 wcpay#3309
